# RobustMatting

./: CMakeLists.txt
src/robust_matting/: main.cpp  robust_matting.cpp
